src/mongo/client/distlock.cpp
@@ -1160,7 +1160,7 @@ namespace mongo {
             if (msgTimer.seconds() > 10) {
 
                 log() << "waited " << timer.seconds() << "s for distributed lock " << _lock._name
-                      << " for " << _why;
+                      << " for " << _why << endl;
 
                 msgTimer.reset();
             }
